--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://code.highcharts.com/modules/sankey.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>    
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://code.highcharts.com/modules/wordcloud.js"></script> 
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script> 
     <script type="text/javascript">       
@@ -21,12 +22,18 @@
       <div id="container"></div>
     </figure>
     <!-- <div id="webvitals"></div> -->    
-    <div id="vital_main" style="visibility: hidden; clear: both"></div>
-    <div id="vital_career" style="visibility: hidden; clear: both"></div>
-    <div id="vital_company" style="visibility: hidden; clear: both"></div>
-    <div id="vital_dx" style="visibility: hidden; clear: both"></div>
-    <div id="vital_biz" style="visibility: hidden; clear: both"></div>
-    <div id="beausable" style="clear: both;"></div>
+    <!-- <div id="vital_main" style="visibility: hidden;"></div>
+    <div id="vital_career" style="visibility: hidden;"></div>
+    <div id="vital_company" style="visibility: hidden;"></div>
+    <div id="vital_dx" style="visibility: hidden;"></div>
+    <div id="vital_biz" style="visibility: hidden;"></div> -->
+    <figure class="highcharts-figure">
+      <div id="graph"></div>
+    </figure>
+    <figure class="highcharts-figure">
+      <div id="word_cloud"></div>
+    </figure>
+    <div id="beausable"></div>        
   </body>
   <script src="./chart.js" type="text/javascript"></script>
   <script src="./graph.js" type="text/javascript"></script>
