유입 차트 추가

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://code.highcharts.com/modules/wordcloud.js"></script> 
+    <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
+    <script src="https://code.highcharts.com/modules/item-series.js"></script>
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script> 
     <script type="text/javascript">       
@@ -27,6 +28,9 @@
     <div id="vital_company" style="visibility: hidden;"></div>
     <div id="vital_dx" style="visibility: hidden;"></div>
     <div id="vital_biz" style="visibility: hidden;"></div> -->
+    <figure class="highcharts-figure">
+      <div id="chart"></div>
+    </figure>
     <figure class="highcharts-figure">
       <div id="graph"></div>
     </figure>
