--- a/index.html
+++ b/index.html
@@ -29,15 +29,27 @@
     <div id="vital_dx" style="visibility: hidden;"></div>
     <div id="vital_biz" style="visibility: hidden;"></div> -->
     <figure class="highcharts-figure">
-      <div id="chart"></div>
+      <div id="chart_main"></div>
+    </figure>
+    <figure class="highcharts-figure">
+      <div id="chart_career"></div>
+    </figure>
+    <figure class="highcharts-figure" style="text-align:center">
+      <div id="graph_LCP"></div>
+    </figure>
+    <figure class="highcharts-figure" style="text-align:center">
+      <div id="graph_FID"></div>
+    </figure>
+    <figure class="highcharts-figure" style="text-align:center">
+      <div id="graph_CLS"></div>
     </figure>
     <figure class="highcharts-figure">
       <div id="graph"></div>
     </figure>
+    <div id="beausable"></div>        
     <figure class="highcharts-figure">
       <div id="word_cloud"></div>
-    </figure>
-    <div id="beausable"></div>        
+    </figure>    
   </body>
   <script src="./chart.js" type="text/javascript"></script>
   <script src="./graph.js" type="text/javascript"></script>
